[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexous"
version = "0.1.0"
description = "NEXOUS - Multi-Agent Orchestration System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "NEXOUS Team"}
]
keywords = ["ai", "agent", "orchestration", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jsonschema>=4.0",
]

[project.scripts]
nexous = "nexous.cli.main:main"

[project.urls]
Homepage = "https://github.com/nexous/nexous"
Documentation = "https://nexous.readthedocs.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexous*"]
